💡 action cableの設定についてコメント

--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,4 +1,7 @@
+# webSocketの①接続管理を行うアダプタと、②アダプタへの接続先を指定
 development:
+  # asyncはインメモリで接続情報を管理する
+  # インメモリなので、複数のプロセスを立ち上げには向いてない(ブロードキャストをうまく扱えない)ので、prodではredisになっている
   adapter: async
 
 test:
